[package]
name = "servo-freetype-sys"
version = "4.0.5"
authors = ["The FreeType Team"]
links = "freetype"
license = "FTL / GPL-2.0"
repository = "https://github.com/servo/libfreetype2/"
homepage = "http://www.freetype.org/"
description = "FreeType is a freely available software library to render fonts."
build = "build.rs"

[lib]
name = "freetype_sys"

[build-dependencies]
pkg-config = { version = "0.3", optional = true }
cmake = { version = "0.1", optional = true }

[features]
default = ["build-native-freetype"]
build-native-freetype = ["pkg-config", "cmake"]
